# techpanel

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a0dac15aec5c_update_schema.py  a71640253481_init_schema.py  b8c1d2e3f4a5_server_connection_kind_docker.py  c7d8e9f0a1b2_servers_ssh_strict_host_key.py  d1e2f3a4b5c6_workspace_git_dotenv.py  d4e5f6a7b8c9_executions_created_at.py  e41060d36e88_update_schema.py  e7276261fb08_update_schema.py  f1a2b3c4d5e6_users_display_name_github_token.py  f2a3b4c5d6e7_step_exec_pipeline_step_set_null.py  g2h3i4j5k6l7_schema_placeholder.py
docs/: Auth-Phase2.md  Deploy-Manager.md  Implementacao-Checklist.md  TechPanel.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AppConfirmDialog.vue  AppPaginationBar.vue  AppToastStack.vue
frontend/src/composables/: useApi.ts  useAuth.ts  useConfirm.ts  useToast.ts
frontend/src/constants/: formOptions.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/views/: DashboardView.vue  EnvironmentFormView.vue  EnvironmentServerDotenvView.vue  EnvironmentsHubView.vue  EnvironmentsListView.vue  ExecutionMonitorView.vue  HelpView.vue  LoginView.vue  PipelineDetailView.vue  PipelineFormView.vue  (+10 more)
src/application/: __init__.py  constants.py  errors.py
src/domain/: errors.py
src/interfaces/: __init__.py
tests/: test_smoke.py
(+227 files in other folders)
